@@ -7,8 +7,25 @@ test_data = 'A text string for testing'
 
 class TestDiskFile(unittest.TestCase):
 
+    def setUp(self):
+        self.testdir = os.path.join(os.path.split(__file__)[0], 'diskfiletests')
+        if not os.path.exists(self.testdir):
+            os.mkdir(self.testdir)
+
+    def tearDown(self):
+        scories = os.listdir(self.testdir)
+        for sc in scories:
+            try:
+                os.unlink(os.path.join(self.testdir, sc))
+            except OSError:
+                sys.stderr.write("Could not remove %s in testdir\n", sc)
+        try:
+            os.rmdir(self.testdir)
+        except OSError:
+            pass
+
     def testUploadAndAbort(self):
-        df = DiskFile('id','title', storage_path='.')
+        df = DiskFile('id','title', storage_path=self.testdir)
         # Should return 0 before data is uploaded
         self.failUnlessEqual(df.get_size(), 0)
 
@@ -20,10 +37,16 @@ class TestDiskFile(unittest.TestCase):
         df._abort() # To remove the temporary files
 
     def testUploadAndRemove(self):
-        df = DiskFile('id','title', storage_path='.')
+        df = DiskFile('id','title', storage_path=self.testdir)
+        df.update_data('first write')
+        name1 = df._v_tmp_filename
         df.update_data(test_data)
-        newname = df._new_filename
+        newname = df._v_tmp_filename
+        self.failIfEqual(newname, name1)
+        self.failIf(os.path.exists(df.getFullFilename(name1)))
         self.failUnless(os.path.exists(df.getFullFilename(newname)))
+        # getFullFilename always provides the current file
+        self.assertEquals(df.getFullFilename(newname), df.getFullFilename())
 
         # passed (id, title) have been (Zope id ie field id, filename)
         # since [32951]
@@ -44,9 +67,54 @@ class TestDiskFile(unittest.TestCase):
         # And that the correct size is returned
         self.failUnlessEqual(df.get_size(), len(test_data))
 
+        # test getData
+        self.assertEquals(df.getData(), test_data)
+
         # Remove the file:
         df.manage_beforeDelete(None,None)
         self.failIf(os.path.exists(df.getFullFilename()))
+
+    def test_getNewFilename(self):
+        df = DiskFile('id','thesong.mp3', storage_path=self.testdir)
+        df.update_data(test_data)
+        newname = df._v_tmp_filename
+        self.failUnless(newname.endswith('.mp3'))
+        # still true after commit
+        df._finish()
+        self.failUnless(df.getFullFilename().endswith('.mp3'))
+
+    def test_finish(self):
+        # See #1801, second point
+        df = DiskFile('id','free name', storage_path=self.testdir)
+        df.update_data(test_data)
+        # In the meanwhile, some other thread creates a file with exact same id
+        wrong_target = os.path.join(self.testdir, 'free name')
+        f = open(wrong_target, 'w')
+        f.write('Some other data')
+        f.close()
+
+        # now our transaction comes to an end
+        df._finish()
+        target = df.getFullFilename()
+        # our data is ok
+        self.failUnlessEqual(os.stat(target)[stat.ST_SIZE], len(test_data))
+        # other thread data is untouched
+        f = open(wrong_target, 'r')
+        self.assertEquals(f.read(), 'Some other data')
+        f.close()
+
+    def test_update(self):
+        # Lower level than an user reuploading a file
+        df = DiskFile('id','title', storage_path=self.testdir, file=test_data)
+        df._finish()
+        self.failIf(df._v_new_file)
+        first_filename = df.getFullFilename()
+        df.update_data('Some new data')
+        df._finish()
+        self.assertEquals(df.getFullFilename(), first_filename)
+        f = open(os.path.join(self.testdir, first_filename))
+        self.assertEquals(f.read(), 'Some new data')
+        f.close()
 
 def test_suite():
     suite = unittest.TestSuite()
